log/build_2021-05-31_18-27-06/gazebo_plugin_sim/stdout_stderr.log
[35m[1mScanning dependencies of target platform_plugin_test[0m
[ 50%] [32mBuilding CXX object CMakeFiles/platform_plugin_test.dir/src/platform_plugin_test.cpp.o[0m
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp: In member function ‘virtual void gazebo_plugin_sim::PlatformPluginTest::Load(gazebo::physics::ModelPtr, sdf::v9::ElementPtr)’:
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:165:46: error: expected primary-expression before ‘<’ token
  165 |        impl_->sim_vel_M1_ = impl_->ros_node_-<create_publisher<geometry_msgs::msg::Vector3>(
      |                                              ^
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:165:47: error: ‘create_publisher’ was not declared in this scope; did you mean ‘rclcpp::create_publisher’?
  165 |        impl_->sim_vel_M1_ = impl_->ros_node_-<create_publisher<geometry_msgs::msg::Vector3>(
      |                                               ^~~~~~~~~~~~~~~~
      |                                               rclcpp::create_publisher
In file included from /opt/ros/foxy/include/rclcpp/node_impl.hpp:39,
                 from /opt/ros/foxy/include/rclcpp/node.hpp:1221,
                 from /opt/ros/foxy/include/rclcpp/executors/single_threaded_executor.hpp:28,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:22,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /opt/ros/foxy/include/gazebo_ros/node.hpp:18,
                 from /home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:12:
/opt/ros/foxy/include/rclcpp/create_publisher.hpp:43:1: note: ‘rclcpp::create_publisher’ declared here
   43 | create_publisher(
      | ^~~~~~~~~~~~~~~~
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:165:91: error: expected primary-expression before ‘>’ token
  165 |        impl_->sim_vel_M1_ = impl_->ros_node_-<create_publisher<geometry_msgs::msg::Vector3>(
      |                                                                                           ^
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:166:9: warning: left operand of comma operator has no effect [-Wunused-value]
  166 |         "~/sim_vel_M1", qos.get_publisher_qos("~/sim_vel_M1", rclcpp::QoS(1)));
      |         ^~~~~~~~~~~~~~
At global scope:
cc1plus: warning: unrecognized command line option ‘-Wno-inconsistent-missing-override’
make[2]: *** [CMakeFiles/platform_plugin_test.dir/build.make:63: CMakeFiles/platform_plugin_test.dir/src/platform_plugin_test.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/platform_plugin_test.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
